* Fix error when calling Event.stopObserving(window). [#30 state:resolved] [jddalton, kangax]

* Fix bug in getEventID where an array is returned instead of a number. [#228 state:resolved] [jddalton]

* Improve NodeList detection for Safari's $A function. [#187 state:resolved] [Garrett Smith, jddalton]

* Use different tactic to sniff for Opera in order to avoid false positives in IE. [#172 state:resolved] [Tobie Langel, jddalton]

* Ensure Selector.handlers.id finds the proper element even when it's not attached to the document. [#198, #271 state:resolved] [jddalton]

* Ensure Element#getDimensions only unhides elements that are hidden. [Andrew Dupont, Nick Stackenburg, jddalton]

* Make Element#getDimensions use offset(Height|Width) rather than client(Height|Width). Closes #10122. [demian85, jddalton, Nick Stackenburg]

* Fix for IE7 to access local files via Ajax.Request. Closes #8259. [Andrew Dupont, hagen.seifert, jddalton]

* Make Object.isNumber check that the number is finite (rather than NaN or +/-Infinity). Closes #10349. [mkim]

* Ensure Object.isHash handles "falsy" values properly. [jddalton]

* Ensure Object.isElement handles "falsy" values properly. [kangax]

* Ensure Hash does not return keys from the prototype chain (e.g., constructor, valueOf, toString). [kangax]

* Fix toString/valueOf sharing same method reference via closure in Class#addMethods. Use plain property assignment, since Object.extend fails to enumerate over toString/valueOf. Closes #10841. [broofa, kangax]

* unit test: Update DOM unit tests to avoid failing on Element#replace tests in Opera. [Andrew Dupont, jddalton]

* Ensure Element.Methods.Simulated.hasAttribute() returns a boolean value. [jddalton]

* Ensure Array#intersect returns correct result if intersect value is 0. [jddalton]

* Ensure Element#hide and Element#show return an element, even if passed an element ID. [jddalton]
