@@ -1,3 +1,5 @@
+* Prevent getEventID from assigning `window` and `document` an eventID. [jddalton]
+
 * Fix error when calling Event.stopObserving(window). [#30 state:resolved] [jddalton, kangax]
 
 * Fix bug in getEventID where an array is returned instead of a number. [#228 state:resolved] [jddalton]
